--- a/docs/api/qiskit-ibm-transpiler/0.12/utils.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.12/utils.mdx
@@ -1,6 +1,6 @@
 ---
-title: utils (latest version)
-description: API reference for qiskit_ibm_transpiler.utils in the latest version of qiskit-ibm-transpiler
+title: utils (v0.12)
+description: API reference for qiskit_ibm_transpiler.utils in qiskit-ibm-transpiler v0.12
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_ibm_transpiler.utils
@@ -18,7 +18,7 @@ python_api_name: qiskit_ibm_transpiler.utils
 
 ### create\_random\_linear\_function
 
-<Function id="qiskit_ibm_transpiler.utils.create_random_linear_function" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/utils.py#L86-L87" signature="qiskit_ibm_transpiler.utils.create_random_linear_function(n_qubits, seed=123)">
+<Function id="qiskit_ibm_transpiler.utils.create_random_linear_function" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/utils.py#L86-L87" signature="qiskit_ibm_transpiler.utils.create_random_linear_function(n_qubits, seed=123)">
   **Parameters**
 
   *   **n\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) –
@@ -31,7 +31,7 @@ python_api_name: qiskit_ibm_transpiler.utils
 
 ### get\_metrics
 
-<Function id="qiskit_ibm_transpiler.utils.get_metrics" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.13/qiskit_ibm_transpiler/utils.py#L70-L78" signature="qiskit_ibm_transpiler.utils.get_metrics(qc)">
+<Function id="qiskit_ibm_transpiler.utils.get_metrics" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/utils.py#L70-L78" signature="qiskit_ibm_transpiler.utils.get_metrics(qc)">
   Returns a dict with metrics from a QuantumCircuit
 
   **Parameters**
