--- a/docs/guides/cloud-setup-untrusted.mdx
+++ b/docs/guides/cloud-setup-untrusted.mdx
@@ -33,6 +33,7 @@ To initialize the service in this situation, use code like the following:
       )
     ```
 
+<span id="rest-untrusted"></span>
 ## Authenticate to the REST API in an untrusted environment
 
 
