--- a/docs/guides/serverless-port-code.ipynb
+++ b/docs/guides/serverless-port-code.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "The following example demonstrates how to port existing code to leverage Qiskit Serverless.\n",
     "<Admonition type=\"note\">\n",
-    "The following code assumes that you have saved your credentials. If you have not, follow the instructions in <LegacyContent>[Set up an IBM Quantum channel](/docs/guides/setup-channel#iqp)</LegacyContent><CloudContent>[Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-untrusted)</CloudContent> to authenticate with your API key.\n",
+    "The following code assumes that you have saved your credentials. If you have not, follow the instructions in <LegacyContent>[Set up an IBM Quantum channel](/docs/guides/setup-channel#iqp)</LegacyContent><CloudContent>[Set up your IBM Cloud account](/docs/guides/cloud-setup-untrusted)</CloudContent> to authenticate with your API key.\n",
     "</Admonition>\n",
     "\n",
     "## Update the experiment\n",
