API key works for any region

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -33,7 +33,8 @@ Your user account is associated with one or more [instances](./instances) that g
 
     Go to the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com) If you have one or more instances shown, skip this step. Otherwise, follow these steps to create an instance.
 
-    1. Make sure that you have the correct account selected from the account switcher in the top header. Click **Create instance**.
+    1. Make sure that you have the correct account and region are selected from the account and region switchers in the top header.
+    1. Click **Create instance**.
          * Choose a name and the plan to use.
          * If you are creating an instance of the Standard Plan, it is recommended that you set the total cost limit or the usage limit. (These values can be updated later.)
          * Scroll down to see the **Terms** link.  After reading the terms, agree to the license agreements by checking the box in the bottom right corner of the page, and click **Next**.
@@ -55,7 +56,7 @@ Your user account is associated with one or more [instances](./instances) that g
 
 <span id="access-credentials"></span>
 ### 2. Find your access credentials
-    1. Find your API key. From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication.
+    1. Find your API key. From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication. Note that you can use the same API key to connect to any region.
     2. Optional: Find the instance you want to use from the [Instances](https://quantum.cloud.ibm.com/instances) page. Click the icon to copy its CRN, then save it in a secure location so you can use it to identify the instance.
 
 <span id="cloud-save"></span>
