Apply suggestions from code review

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -59,9 +59,9 @@
     "\n",
     "## Get started with Qiskit Functions\n",
     "\n",
-    "### Requesting a free trial for 3rd-party Qiskit Functions\n",
+    "### Request a free trial for third-party Qiskit Functions\n",
     "\n",
-    "To request a new free trial, navigate to the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions), and explore the details panel. You can click on `Request a free trial`, fill out information required by the Functions partner, including the IBM Cloud `AccessGroupId`:\n",
+    "To request a new free trial, navigate to the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions), and explore the details panel. Click on `Request a free trial` and fill out information required by the Functions partner, including the IBM Cloud `AccessGroupId`:\n",
     "\n",
     "- Navigate to [IBM Cloud IAM](http://cloud.ibm.com/iam/groups)\n",
     "- Click into a Group name\n",
@@ -304,10 +304,10 @@
     "- **`INITIALIZING`**: The remote program is starting; this includes setting up the remote environment and installing dependencies.\n",
     "- **`RUNNING`**: The program is running. This also includes several more detailed statuses if supported by specific functions\n",
     "    - **`RUNNING: MAPPING`**\": The function is currently mapping your classical inputs to quantum inputs\n",
-    "    - **`RUNNING: OPTIMIZING_FOR_HARDWARE`**\": The function is optimizing for the selected QPU. This could include circuit transpilation, QPU characterization, observable backpropagation, etc.\n",
+    "    - **`RUNNING: OPTIMIZING_FOR_HARDWARE`**\": The function is optimizing for the selected QPU. This could include circuit transpilation, QPU characterization, observable backpropagation, and so forth\n",
     "    - **`RUNNING: WAITING_FOR_QPU`**: The function has submitted a job to Qiskit Runtime, and is waiting in the queue\n",
     "    - **`RUNNING: EXECUTING_QPU`**: The function has an active Qiskit Runtime job\n",
-    "    - **`RUNNING: POST_PROCESSING`**: The function is post-processing results. This could include error mitigation, mapping quantum results to classical, etc.\n",
+    "    - **`RUNNING: POST_PROCESSING`**: The function is post-processing results. This could include error mitigation, mapping quantum results to classical, and so forth\n",
     "- **`DONE`**: The program is complete, and you can retrieve result data with `job.results()`.\n",
     "- **`ERROR`**: The program stopped running because of a problem. Use `job.result()` to get the error message.\n",
     "- **`CANCELED`**: The program was canceled; either by a user, the service, or the server."
