Functions Docs updates (#3507)
- Added new information for free trials -- collecting access group IDs
- Since a majority of vendors have implemented detailed statuses, we've
added that here
- Updated diagram (since it had a long-standing issue 😅 )

---------

Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -47,7 +47,7 @@
     "| Type | What does it do? | Example inputs and outputs | Who is it for? |\n",
     "| - | - | - | - |\n",
     "| Circuit function | Simplified interface for running circuits. Abstracts transpilation, error suppression, error mitigation | **Input**: Abstract `PUB`s <br/> **Output**: Mitigated expectation values | Researchers using Qiskit to discover new algorithms and applications, without needing to focus on optimizing for hardware or handling error. Circuit functions can be used to build custom application functions. |\n",
-    "| Application function | Covers higher-level tasks, like exploring algorithms and domain-specific use cases. Abstracts quantum workflow to solve tasks, with classical inputs and outputs | **Input**: Molecules, graphs <br/> **Output**: Energy, cost | Researchers in non-quantum domains, integrating quantum into existing large-scale classical workflows, without needing to map classical data to quantum circuits. |"
+    "| Application function | Covers higher-level tasks, like exploring algorithms and domain-specific use cases. Abstracts quantum workflow to solve tasks, with classical inputs and outputs | **Input**: Molecules, graphs <br/> **Output**: Ground + excited state energy, optimal values for cost function | Researchers in non-quantum domains, integrating quantum into existing large-scale classical workflows, without needing to map classical data to quantum circuits. |"
    ]
   },
   {
@@ -58,6 +58,15 @@
     "Functions are provided by IBM&reg; and third-party partners. Each is performant for specific workload characteristics and have unique performance-tuning options. Premium Plan users can get started with IBM Qiskit Functions for free, or procure a license from one of the partners who have contributed a function to the catalog.\n",
     "\n",
     "## Get started with Qiskit Functions\n",
+    "\n",
+    "### Request a free trial for third-party Qiskit Functions\n",
+    "\n",
+    "To request a new free trial, navigate to the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions), and explore the details panel. Click on `Request a free trial` and fill out information required by the Functions partner, including the IBM Cloud `AccessGroupId`:\n",
+    "\n",
+    "- Navigate to [IBM Cloud IAM](http://cloud.ibm.com/iam/groups)\n",
+    "- Click into a Group name\n",
+    "- Click Details\n",
+    "- Copy the Access Group ID. It should start with `AccessGroup-`\n",
     "\n",
     "### Install Qiskit Functions Catalog client\n",
     "\n",
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6699700c-ae26-4c10-8d09-05ee77a1afb7",
    "metadata": {},
    "outputs": [],
@@ -257,7 +266,12 @@
     "\n",
     "- **`QUEUED`**: The remote program is in the Qiskit Function queue. The queue priority is based on how much you've used Qiskit Functions.\n",
     "- **`INITIALIZING`**: The remote program is starting; this includes setting up the remote environment and installing dependencies.\n",
-    "- **`RUNNING`**: The program is running.\n",
+    "- **`RUNNING`**: The program is running. This also includes several more detailed statuses if supported by specific functions\n",
+    "    - **`RUNNING: MAPPING`**\": The function is currently mapping your classical inputs to quantum inputs\n",
+    "    - **`RUNNING: OPTIMIZING_FOR_HARDWARE`**\": The function is optimizing for the selected QPU. This could include circuit transpilation, QPU characterization, observable backpropagation, and so forth\n",
+    "    - **`RUNNING: WAITING_FOR_QPU`**: The function has submitted a job to Qiskit Runtime, and is waiting in the queue\n",
+    "    - **`RUNNING: EXECUTING_QPU`**: The function has an active Qiskit Runtime job\n",
+    "    - **`RUNNING: POST_PROCESSING`**: The function is post-processing results. This could include error mitigation, mapping quantum results to classical, and so forth\n",
     "- **`DONE`**: The program is complete, and you can retrieve result data with `job.results()`.\n",
     "- **`ERROR`**: The program stopped running because of a problem. Use `job.result()` to get the error message.\n",
     "- **`CANCELED`**: The program was canceled; either by a user, the service, or the server."
@@ -418,25 +432,7 @@
    "source": [
     "### Fetch error messages\n",
     "\n",
-    "If a program status is `ERROR`, use `job.result()` to fetch the error message as follows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "3e9d090a-7eb4-476e-92f8-6871803a704d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PrimitiveResult([PubResult(data=DataBin(evs=np.ndarray(<shape=(), dtype=float64>), stds=np.ndarray(<shape=(), dtype=float64>), ensemble_standard_error=np.ndarray(<shape=(), dtype=float64>)), metadata={'shots': 4096, 'target_precision': 0.015625, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32})], metadata={'dynamical_decoupling': {'enable': True, 'sequence_type': 'XX', 'extra_slack_distribution': 'middle', 'scheduling_method': 'alap'}, 'twirling': {'enable_gates': False, 'enable_measure': True, 'num_randomizations': 'auto', 'shots_per_randomization': 'auto', 'interleave_randomizations': True, 'strategy': 'active-accum'}, 'resilience': {'measure_mitigation': True, 'zne_mitigation': False, 'pec_mitigation': False}, 'version': 2})\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(job.result())"
+    "If a program status is `ERROR`, use `job.error_message()` to fetch the error message as follows:"
    ]
   },
   {
