Replace self-hosted videos with IBMVideo components (#3506)
These are now uploaded to the IBM video hosting service so we can embed
them using the new component.

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -58,9 +58,7 @@ The basic workflow for batches and sessions is similar:
 
 The following video illustrates the basic workflow, using sessions as an example:
 
-<video title="A user starts a session job and becomes the priority user.  They submit jobs to the QPU while other users wait. After the prioritized user's session finishes, the next person's jobs can begin processing." className="max-w-auto h-auto" controls>
-  <source src="/docs/videos/guides/sessions/demo.mp4" type="video/mp4"></source>
-</video>
+<IBMVideo id="134371940" title="A user starts a session job and becomes the priority user.  They submit jobs to the QPU while other users wait. After the prioritized user's session finishes, the next person's jobs can begin processing."/>
 
 For full details about the TTL timers, see the [Maximum execution time](/docs/guides/max-execution-time) guide.
 
